# noaa_coops

./: .bumpversion.cfg  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: nightly.yml  pre_release.yml  publish-to-test-pypi.yml.disabled  publish.yml  pull_request.yml  pythonpublish.yml  pythontest.yml  release.yml  test-publish.yml  test.yml
examples/: currents_example.py  readme_demo.py
noaa_coops/: __init__.py  _endpoints.py  _exceptions.py  _http.py  _metadata.py  _parsing.py  _products.py  api.py  noaa_coops.py  requirements.txt  station.py
noaa_coops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
noaa_coops/tests/: test_noaa_coops.py  test_py_noaa.py
tests/: conftest.py  test_http.py  test_multi_block.py  test_noaa_coops.py  test_retry.py  test_station.py  test_validators.py
tests/cassettes/test_station/: test_invalid_datum.yaml  test_station_data.yaml  test_station_metadata.yaml  test_stations_from_bbox.yaml  test_stations_from_bbox_invalid_coords.yaml
