[tool.poetry]
name = "noaa-coops"
version = "0.4.0"
description = "Python wrapper for NOAA Tides & Currents Data and Metadata."
authors = ["Gregory Clunies <greg.clunies@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.2"
zeep = "^4.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
tox = "^4.15.1"
ruff = "^0.5.0"
make = "^0.1.6.post2"
reuse = "^3.0.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -p no:warnings --cov=reflekt tests/"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39,py310,py311

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""
