# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = noaa_coops
version = 0.1.8
author = Greg Clunies
author-email = greg.clunies@gmail.com
home-page = https://github.com/GClunies/noaa_coops
description = Python wrapper for NOAA Tides & Currents Data and Metadata
long-description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
project_urls = 
    Bug Tracker = https://github.com/GClunies/noaa_coops/issues

[options]
zip_safe = false
packages = noaa_coops
install_requires =
    requests
    numpy
    pandas
    zeep
